--- a/src/app/catalog_May/demo_02.html
+++ b/src/app/catalog_May/demo_02.html
@@ -9,7 +9,7 @@
         <div id="example">
             <h4>{{title}}</h4>
             <p>
-                <a href="{{url}}" target="_blank">{{site}}</a>
+                <a v-bind:href="url" target="_blank">{{site}}</a>
             </p>
             <p>{{details()}}</p>
         </div>
