--- a/src/app/catalog_May/demo_04.html
+++ b/src/app/catalog_May/demo_04.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Vue模板语法（四）</title>
-        <script src="/Projects/SkillsTrainCamp/src/3rdLibs/Vue/vue.js"></script>    
+        <script src="/src/3rdLibs/Vue/vue.js"></script>    
         
         <style>
             .class1 {
