--- a/src/app/template.html
+++ b/src/app/template.html
@@ -5,7 +5,7 @@
     <title>表达式</title>      
 
     <style>
-        #app {
+        .app-box {
             width: 1200px;
             margin: auto;
             margin-top: 52px;
@@ -16,7 +16,7 @@
     </style> 
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="app-box">
         
     </div>
     
