--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,15 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('./my-font.woff') format('woff'),
+         url('./my-font.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
+}
+
 body {
     background: url(./bg.jpg);
 }
 .hello {
     color: red;
-    
+    font-family: 'MyFont';
 }
